# bucketeer

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: DESIGN.md  PLAN.md  feature.md
scripts/: gen-icon.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: buckets_toml.rs  clients.rs  delete.rs  diagnostics.rs  downloads.rs  editor.rs  error.rs  inspect.rs  ipc.rs  lib.rs  locations.rs  main.rs  models.rs  provider.rs  s3ops.rs  search.rs  secrets.rs  settings.rs  state.rs  telemetry.rs  transfers.rs  uploads.rs
src/components/buckets/: BucketFormModal.tsx  BucketManagerModal.tsx  BucketPicker.tsx
src/components/dashboard/: ActivityCard.tsx  BucketCard.tsx  Dashboard.tsx  HeroCard.tsx  QuickActionsCard.tsx  RecentBucketsGrid.tsx
src/components/explorer/: Breadcrumb.tsx  BulkActionBar.tsx  ConfirmDeleteModal.tsx  DirectPathBar.tsx  EditorDrawer.tsx  ExplorerMain.tsx  MetadataDrawer.tsx  ObjectTable.tsx  RowContextMenu.tsx  SaveLocationModal.tsx  SharePresignedModal.tsx  States.tsx  SummaryStrip.tsx  Toolbar.tsx  (+2 more)
src/lib/: icons.ts  ipc.ts  navigation.ts  updater.ts  use-presence.ts  utils.ts
src/stores/: useBucketStore.ts  useExplorerStore.ts  useLocationsStore.ts  useNetworkStore.ts  useNotificationStore.ts  useSearchStore.ts  useSettingsStore.ts  useThemeStore.ts  useTransferStore.ts  useWorkspaceStore.ts
src/styles/: globals.css  tokens.css
(+25 files in other folders)
