[package]
name = "bucketeer"
version = "0.1.2"
description = "A next-generation Rust S3 browser"
edition = "2021"
# Pinned to the MSRV of the AWS SDK v1 crates (>= 1.91.1).
rust-version = "1.91"

[lib]
name = "bucketeer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
flate2 = "1"
zstd = "0.13"
dirs = "5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
aws-smithy-mocks-experimental = "0.2"
